Change alt-texts of navbar icons

--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -20,11 +20,11 @@
     <nav aria-label="Primary navigation" id="nav-menu" class="nav-menu">
         <img id="logo" src="../assets/img/logo-white.png" alt="Join Logo">
         <div class="nav-menu__btn-container">
-            <a href="./summary.html"><img src="../assets/img/summary.svg" alt="Summary">Summary</a>
-            <a href="./add-task.html"><img src="../assets/img/add-task.svg" alt="Add Task">Add Task</a>
-            <a href="./board.html"><img src="../assets/img/board.svg" alt="Board">Board</a>
+            <a href="./summary.html"><img src="../assets/img/summary.svg" alt="go to Summary-page">Summary</a>
+            <a href="./add-task.html"><img src="../assets/img/add-task.svg" alt="go to Add-Task-page">Add Task</a>
+            <a href="./board.html"><img src="../assets/img/board.svg" alt="go to Board-page">Board</a>
             <a class="nav-btn--selected deactivated" href="./contacts.html"><img src="../assets/img/contacts.svg"
-                    alt="Contacts">Contacts</a>
+                    alt="go to Contacts-page">Contacts</a>
         </div>
         <div class="nav-menu__bottom__btn">
             <a href="./privacy-policy.html">Privacy Policy</a>
@@ -90,126 +90,6 @@
                                             <p id="contact-email">max.mustermann@web.de</p>
                                         </div>
                                     </div>
-                                    <div class="contact-list__item">
-                                        <img src="../assets/img/user-img-anna.svg"
-                                            alt="colored circle with starting letters of name and surname">
-                                        <div>
-                                            <p id="contact-name">Max Mustermann</p>
-                                            <p id="contact-email">max.mustermann@web.de</p>
-                                        </div>
-                                    </div>
-                                    <div class="contact-list__item">
-                                        <img src="../assets/img/user-img-anna.svg"
-                                            alt="colored circle with starting letters of name and surname">
-                                        <div>
-                                            <p id="contact-name">Max Mustermann</p>
-                                            <p id="contact-email">max.mustermann@web.de</p>
-                                        </div>
-                                    </div>
-                                    <div class="contact-list__item">
-                                        <img src="../assets/img/user-img-anna.svg"
-                                            alt="colored circle with starting letters of name and surname">
-                                        <div>
-                                            <p id="contact-name">Max Mustermann</p>
-                                            <p id="contact-email">max.mustermann@web.de</p>
-                                        </div>
-                                    </div>
-                                    <div class="contact-list__item">
-                                        <img src="../assets/img/user-img-anna.svg"
-                                            alt="colored circle with starting letters of name and surname">
-                                        <div>
-                                            <p id="contact-name">Max Mustermann</p>
-                                            <p id="contact-email">max.mustermann@web.de</p>
-                                        </div>
-                                    </div>
-                                    <div class="contact-list__item">
-                                        <img src="../assets/img/user-img-anna.svg"
-                                            alt="colored circle with starting letters of name and surname">
-                                        <div>
-                                            <p id="contact-name">Max Mustermann</p>
-                                            <p id="contact-email">max.mustermann@web.de</p>
-                                        </div>
-                                    </div>
-                                    <div class="contact-list__item">
-                                        <img src="../assets/img/user-img-anna.svg"
-                                            alt="colored circle with starting letters of name and surname">
-                                        <div>
-                                            <p id="contact-name">Max Mustermann</p>
-                                            <p id="contact-email">max.mustermann@web.de</p>
-                                        </div>
-                                    </div>
-                                    <div class="contact-list__item">
-                                        <img src="../assets/img/user-img-anna.svg"
-                                            alt="colored circle with starting letters of name and surname">
-                                        <div>
-                                            <p id="contact-name">Max Mustermann</p>
-                                            <p id="contact-email">max.mustermann@web.de</p>
-                                        </div>
-                                    </div>
-                                    <div class="contact-list__item">
-                                        <img src="../assets/img/user-img-anna.svg"
-                                            alt="colored circle with starting letters of name and surname">
-                                        <div>
-                                            <p id="contact-name">Max Mustermann</p>
-                                            <p id="contact-email">max.mustermann@web.de</p>
-                                        </div>
-                                    </div>
-                                    <div class="contact-list__item">
-                                        <img src="../assets/img/user-img-anna.svg"
-                                            alt="colored circle with starting letters of name and surname">
-                                        <div>
-                                            <p id="contact-name">Max Mustermann</p>
-                                            <p id="contact-email">max.mustermann@web.de</p>
-                                        </div>
-                                    </div>
-                                    <div class="contact-list__item">
-                                        <img src="../assets/img/user-img-anna.svg"
-                                            alt="colored circle with starting letters of name and surname">
-                                        <div>
-                                            <p id="contact-name">Max Mustermann</p>
-                                            <p id="contact-email">max.mustermann@web.de</p>
-                                        </div>
-                                    </div>
-                                    <div class="contact-list__item">
-                                        <img src="../assets/img/user-img-anna.svg"
-                                            alt="colored circle with starting letters of name and surname">
-                                        <div>
-                                            <p id="contact-name">Max Mustermann</p>
-                                            <p id="contact-email">max.mustermann@web.de</p>
-                                        </div>
-                                    </div>
-                                    <div class="contact-list__item">
-                                        <img src="../assets/img/user-img-anna.svg"
-                                            alt="colored circle with starting letters of name and surname">
-                                        <div>
-                                            <p id="contact-name">Max Mustermann</p>
-                                            <p id="contact-email">max.mustermann@web.de</p>
-                                        </div>
-                                    </div>
-                                    <div class="contact-list__item">
-                                        <img src="../assets/img/user-img-anna.svg"
-                                            alt="colored circle with starting letters of name and surname">
-                                        <div>
-                                            <p id="contact-name">Max Mustermann</p>
-                                            <p id="contact-email">max.mustermann@web.de</p>
-                                        </div>
-                                    </div>
-                                    <div class="contact-list__item">
-                                        <img src="../assets/img/user-img-anna.svg"
-                                            alt="colored circle with starting letters of name and surname">
-                                        <div>
-                                            <p id="contact-name">Max Mustermann</p>
-                                            <p id="contact-email">max.mustermann@web.de</p>
-                                        </div>
-                                    </div>
-                                    <div class="contact-list__item">
-                                        <img src="../assets/img/user-img-anna.svg"
-                                            alt="colored circle with starting letters of name and surname">
-                                        <div>
-                                            <p id="contact-name">Max Mustermann</p>
-                                            <p id="contact-email">max.mustermann@web.de</p>
-                                        </div>
-                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -225,23 +105,19 @@
                                 <div class="rendered-card__header">
                                     <img src="../assets/img/user-img-anna.svg"
                                         alt="colored circle with starting letters of name and surname">
-                                    <div class="header__display-contact">
+                                    <div class="manage-contact__header">
                                         <h3>Max Mustermann</h3>
-                                        <div class="manage-contact">
-                                            <span class="manage-contact__edit">
-                                                <img src="../assets/img/edit.svg" alt="a grey pencil">
-                                                Edit</span>
-                                            <span class="manage-contact__delete">
-                                                <img src="../assets/img/delete.svg" alt="a grey trashbin">
-                                                Delete</span>
+                                        <div class="manage-contact__actions">
+                                                <img class ="action__edit" src="../assets/img/edit-with-text.svg" alt="a grey pencil">
+                                                <img class="action__delete" src="../assets/img/delete-with-text.svg" alt="a grey trashbin">
                                         </div>
                                     </div>
                                 </div>
 
-                                <p class="info-header">Contact Information</p>
-                                <div class="contact-details">
+                                <p class="contact-info__header">Contact Information</p>
+                                <div class="contact-info__details">
                                     <p><strong>Email</strong></p>
-                                    <p class="contact-details__email">max.mustermann@web.de</p>
+                                    <p class="details__email">max.mustermann@web.de</p>
                                     <p><strong>Phone</strong></p>
                                     <p>+49 1111 111 111</p>
                                 </div>
@@ -253,9 +129,9 @@
 
             </main>
         </div>
-        <dialog class="add-contact__overlay">
+        <dialog class="add-contact__dialog">
 
-            <div class="overlay-left">
+            <div class="dialog-left">
                 <img src="../assets/img/logo-white.png"
                     alt="the word: join with a big J with a blue dot on the left side">
                 <h1>Add contact</h1>
@@ -263,17 +139,17 @@
                 <div class="content-left__bluestrip"></div>
             </div>
 
-            <div class="overlay-right">
-                <div class="close-button__wrapper" id="overlay-close-btn">
+            <div class="dialog-right">
+                <div class="close-button__wrapper" id="dialog-close-btn">
                     <img src="../assets/img/close.svg" alt="icon of the letter X">
                 </div>
                 <div class="content-right__wrapper">
-                    <div class="img-wrapper">
+                    <div class="profil-img__wrapper">
                         <img src="../assets/img/unknownuser.png"
                             alt="a grey circle with a white outline of a person in the middle">
                     </div>
                     <div class="width-div">
-                        <div class="form__inputfields">
+                        <div class="inputfields">
                             <div class="inputfield__wrapper">
                                 <input type="text" placeholder="Name" aria-label="name">
                                 <img src="../assets/img/person.svg" alt="icon of an person">
@@ -288,7 +164,7 @@
                                 <input type="tel" placeholder="Phone" aria-label="Phone">
                                 <img src="../assets/img/call.svg" alt="icon of an phone">
                             </div>
-                            <div class="overlay-right__button-holder">
+                            <div class="inputfields__button-holder">
                                 <button class="empty-btn">Cancel<img src="../assets/img/close.svg"
                                         alt="icon of the letter X"></button>
                                 <button class="filled-btn">Create contact<img src="../assets/img/done.svg"
@@ -299,20 +175,20 @@
                 </div>
             </div>
         </dialog>
-        <!-- ############### Nur um zu sehen ob Backdrop funktioniert und Overlay nicht immer da ist########## -->
+        <!-- ############### Nur um zu sehen ob Backdrop funktioniert und dialog nicht immer da ist########## -->
         <script>
-            const dialog = document.querySelector(".add-contact__overlay");
+            const dialog = document.querySelector(".add-contact__dialog");
             const showButton = document.getElementById("add-new-contact-btn");
-            const closeButton = document.getElementById("overlay-close-btn");
+            const closeButton = document.getElementById("dialog-close-btn");
 
             showButton.addEventListener("click", () => {
                 dialog.showModal();
-                document.querySelector(".add-contact__overlay").style.visibility = "visible";
+                document.querySelector(".add-contact__dialog").style.visibility = "visible";
             });
 
             closeButton.addEventListener("click", () => {
                 dialog.close();
-                document.querySelector(".add-contact__overlay").style.visibility = "hidden";
+                document.querySelector(".add-contact__dialog").style.visibility = "hidden";
             });
         </script>
 </body>
