--- a/pages/summary.html
+++ b/pages/summary.html
@@ -24,10 +24,11 @@
     <nav aria-label="Primary navigation" id="nav-menu" class="nav-menu">
         <img id="logo" src="../assets/img/logo-white.png" alt="Join Logo">
         <div class="nav-menu__btn-container">
-            <a class="nav-btn--selected deactivated" href="./summary.html"><img src="../assets/img/summary.svg" alt="Summary">Summary</a>
-            <a href="./add-task.html"><img src="../assets/img/add-task.svg" alt="Add Task">Add Task</a>
-            <a href="./board.html"><img src="../assets/img/board.svg" alt="Board">Board</a>
-            <a href="./contacts.html"><img src="../assets/img/contacts.svg" alt="Contacts">Contacts</a>
+            <a href="./summary.html"><img src="../assets/img/summary.svg" alt="go to Summary-page">Summary</a>
+            <a href="./add-task.html"><img src="../assets/img/add-task.svg" alt="go to Add-Task-page">Add Task</a>
+            <a href="./board.html"><img src="../assets/img/board.svg" alt="go to Board-page">Board</a>
+            <a class="nav-btn--selected deactivated" href="./contacts.html"><img src="../assets/img/contacts.svg"
+                    alt="go to Contacts-page">Contacts</a>
         </div>
         <div class="nav-menu__bottom__btn">
             <a href="./privacy-policy.html">Privacy Policy</a>
@@ -75,7 +76,7 @@
 
                                 <a href="./board.html"
                                     class="metrics__box metrics__box-top metrics__icon-todo">
-                                    <img class="" src="../assets/img/to-do.svg" alt="To-do Image">
+                                    <img class="" src="../assets/img/to-do.svg" alt="Grey circle with a white pen in the center">
                                     <div class="metrics__box-text">
                                         <span class="metric-number">1</span>
                                         <span class="metric-txt">To-do</span>
@@ -85,7 +86,7 @@
                                 <a href="./board.html"
                                     class="metrics__box metrics__box-top
                                     metrics__icon-done">
-                                    <img src="../assets/img/done.png" alt="To-do Image">
+                                    <img src="../assets/img/done.png" alt="Grey circle with a white checkmark in the center">
                                     <div class="metrics__box-text">
                                         <span class="metric-number">1</span>
                                         <span class="metric-txt">Done</span>
@@ -98,7 +99,7 @@
 
                                 <a href="./board.html" class="metrics__box metrics__box-middle">
                                     <div class="metrics__box-left">
-                                        <img src="../assets/img/urgent-summary.png" alt="To-do Image">
+                                        <img src="../assets/img/urgent-summary.png" alt="Red circle with two white arrows on top of each other pointing up">
                                         <div class="metrics__box-text">
                                             <span class="metric-number">1</span>
                                             <span class="metric-txt-middle">Urgent</span>
