--- a/pages/add-task.html
+++ b/pages/add-task.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="de">
 
-    <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -13,137 +13,141 @@
     <link rel="stylesheet" href="../styles/header.css">
     <link rel="stylesheet" href="../styles/navigation.css">
     <link rel="stylesheet" href="../styles/add-task.css">
-   
+
 </head>
 
-    <body>
-        <nav aria-label="Primary navigation" id="nav-menu" class="nav-menu">
-            <img id="logo" src="../assets/img/logo-white.png" alt="Join Logo">
-            <div class="nav-menu__btn-container">
-                <a href="./summary.html"><img src="../assets/img/summary.svg" alt="Summary">Summary</a>
-                <a class="nav-btn--selected deactivated" href="./add-task.html"><img src="../assets/img/add-task.svg" alt="Add Task">Add Task</a>
-                <a href="./board.html"><img src="../assets/img/board.svg" alt="Board">Board</a>
-                <a href="./contacts.html"><img src="../assets/img/contacts.svg" alt="Contacts">Contacts</a>
+<body>
+    <nav aria-label="Primary navigation" id="nav-menu" class="nav-menu">
+        <img id="logo" src="../assets/img/logo-white.png" alt="Join Logo">
+        <div class="nav-menu__btn-container">
+            <a href="./summary.html"><img src="../assets/img/summary.svg" alt="go to Summary-page">Summary</a>
+            <a href="./add-task.html"><img src="../assets/img/add-task.svg" alt="go to Add-Task-page">Add Task</a>
+            <a href="./board.html"><img src="../assets/img/board.svg" alt="go to Board-page">Board</a>
+            <a class="nav-btn--selected deactivated" href="./contacts.html"><img src="../assets/img/contacts.svg"
+                    alt="go to Contacts-page">Contacts</a>
+        </div>
+        <div class="nav-menu__bottom__btn">
+            <a href="./privacy-policy.html">Privacy Policy</a>
+            <a href="./legal-notice.html">Legal Notice</a>
+        </div>
+    </nav>
+
+    <div class="site-wrapper">
+        <header class="header" id="header">
+            <div class="header-wrapper">
+                <div class="header__content content-wrapper">
+                    <span id="page-title">Kanban Project Management Tool</span>
+                    <div id="info-container" class="info-container">
+                        <a href="./help.html">
+                            <img id="help-img" class="help-img" src="../assets/img/help.svg" alt="Help question mark">
+                        </a>
+                        <div class="header__user-info">
+                            <img src="../assets/img/user-ellipse.svg" alt="User picture">
+                            <span>SM</span>
+                        </div>
+                    </div>
+                </div>
+                <nav aria-label="user drop down menu" class="d-none">
+                    <ul class="user-drop-down-menu">
+                        <li><a href="./legal-notice.html">Legal Notice</a></li>
+                        <li><a href="./privacy-policy.html">Privacy Policy</a></li>
+                        <li><a href="#">Log Out</a></li>
+                    </ul>
+                </nav>
             </div>
-            <div class="nav-menu__bottom__btn">
-                <a href="./privacy-policy.html">Privacy Policy</a>
-                <a href="./legal-notice.html">Legal Notice</a>
-            </div>
-        </nav>
-        
-        <div class="site-wrapper">
-            <header class="header" id="header">
-                <div class="header-wrapper">
-                    <div class="header__content content-wrapper">
-                        <span id="page-title">Kanban Project Management Tool</span>
-                        <div id="info-container" class="info-container">
-                            <a href="./help.html">
-                                <img id="help-img" class="help-img" src="../assets/img/help.svg" alt="Help question mark">
-                            </a>
-                            <div class="header__user-info">
-                                <img src="../assets/img/user-ellipse.svg" alt="User picture">
-                                <span>SM</span>
+        </header>
+
+        <main>
+            <div class="content">
+                <section id="task-content">
+                    <div class="task-content__header content-wrapper">
+                        <h1>Add Task</h1>
+                    </div>
+                    <div class="task-content__container content-wrapper">
+                        <div class="add-task__left-column">
+                            <div class="add-task__field">
+                                <label for="title" class="required--after">Title</label>
+                                <input type="text" placeholder="Enter a title" required>
+                            </div>
+                            <div class="add-task__field">
+                                <label for="description">Description</label>
+                                <textarea name="Add Task Description" id="task-description-area"></textarea>
+                            </div>
+                            <div class="add-task__field">
+                                <label for="due date" class="required required--after">Due date</label>
+                                <input type="date" placeholder="dd/mm/yyyy" required>
+                            </div>
+                        </div>
+                        <div class="grey-seperator"></div>
+                        <div class="add-task__right-column">
+                            <div class="add-task__field">
+                                <label for="priority">Priority</label>
+                                <div class="priority-options">
+                                    <div class="priority-options__btn">Urgent <img
+                                            src="../assets/img/priority-urgent.svg" alt="urgent"></div>
+                                    <div class="priority-options__btn">Medium <img
+                                            src="../assets/img/priority-medium.svg" alt="medium"></div>
+                                    <div class="priority-options__btn">Low <img src="../assets/img/priority-low.svg"
+                                            alt="low"></div>
+                                </div>
+                            </div>
+                            <div class="add-task__field">
+                                <label for="assigned to">Assigned to</label>
+                                <select name="assigned to" id="assigned-to">
+                                    <option value="1">Option1</option>
+                                    <option value="2">Option2</option>
+                                </select>
+                            </div>
+                            <div class="add-task__field">
+                                <label for="category" class="required--after">Category</label>
+                                <select name="category" id="category" required>
+                                    <option value="1">Option1</option>
+                                    <option value="2">Option2</option>
+                                </select>
+                            </div>
+                            <div class="add-task__field subtasks__input--border-color">
+                                <label for="subtasks">Subtasks</label>
+                                <input type="subtasks" placeholder="Add new subtask">
                             </div>
                         </div>
                     </div>
-                    <nav aria-label="user drop down menu" class="d-none"> 
-                        <ul class="user-drop-down-menu">
-                            <li><a href="./legal-notice.html">Legal Notice</a></li>
-                            <li><a href="./privacy-policy.html">Privacy Policy</a></li>
-                            <li><a href="#">Log Out</a></li>
-                        </ul>
-                    </nav>
-                </div>
-            </header>
 
-            <main>
-                <div class="content">
-                    <section id="task-content">
-                        <div class="task-content__header content-wrapper">
-                            <h1>Add Task</h1>
-                        </div>
-                        <div class="task-content__container content-wrapper">
-                            <div class="add-task__left-column">
-                                <div class="add-task__field">
-                                    <label for="title" class="required--after">Title</label>
-                                    <input type="text" placeholder="Enter a title" required>
-                                </div>
-                                <div class="add-task__field">
-                                    <label for="description">Description</label>
-                                    <textarea name="Add Task Description" id="task-description-area"></textarea>
-                                </div>
-                                <div class="add-task__field">
-                                    <label for="due date" class="required required--after">Due date</label>
-                                    <input type="date" placeholder="dd/mm/yyyy" required>
-                                </div>
+                    <div class="task-content__footer content-wrapper">
+                        <span class="required required--before"> This field is required</span>
+                        <div class="task-content__footer-btn">
+                            <div class="empty-btn">Clear
+                                <img src="../assets/img/close.svg" alt="close icon">
                             </div>
-                            <div class="grey-seperator"></div>
-                            <div class="add-task__right-column">
-                                <div class="add-task__field">
-                                    <label for="priority">Priority</label>
-                                    <div class="priority-options">
-                                        <div class="priority-options__btn">Urgent <img src="../assets/img/priority-urgent.svg" alt="urgent"></div>
-                                        <div class="priority-options__btn">Medium <img src="../assets/img/priority-medium.svg" alt="medium"></div>
-                                        <div class="priority-options__btn">Low <img src="../assets/img/priority-low.svg" alt="low"></div>
-                                    </div>
-                                </div>
-                                <div class="add-task__field">
-                                    <label for="assigned to">Assigned to</label>
-                                    <select name="assigned to" id="assigned-to">
-                                        <option value="1">Option1</option>
-                                        <option value="2">Option2</option>
-                                    </select>
-                                </div>
-                                <div class="add-task__field">
-                                    <label for="category" class="required--after">Category</label>
-                                    <select name="category" id="category" required>
-                                        <option value="1">Option1</option>
-                                        <option value="2">Option2</option>
-                                    </select>
-                                </div>
-                                <div class="add-task__field subtasks__input--border-color">
-                                    <label for="subtasks">Subtasks</label>
-                                    <input type="subtasks" placeholder="Add new subtask">
-                                </div>
+                            <div class="filled-btn">Create Task
+                                <img src="../assets/img/done.svg" alt="done icon">
                             </div>
                         </div>
-                        
-                        <div class="task-content__footer content-wrapper">
-                            <span class="required required--before"> This field is required</span>
-                            <div class="task-content__footer-btn">
-                                <div class="empty-btn">Clear 
-                                    <img src="../assets/img/close.svg" alt="close icon">
-                                </div>
-                                <div class="filled-btn">Create Task
-                                    <img src="../assets/img/done.svg" alt="done icon">
-                                </div>
-                            </div>
-                        </div>
-                    </section>
-                </div>
-            </main>
-        </div>
-        <script src="./script.js"></script>
-        <script src="./scripts/login.js"></script>
-        <script src="./scripts/main.js"></script>
-        <script src="./scripts/navigation.js"></script>
+                    </div>
+                </section>
+            </div>
+        </main>
+    </div>
+    <script src="./script.js"></script>
+    <script src="./scripts/login.js"></script>
+    <script src="./scripts/main.js"></script>
+    <script src="./scripts/navigation.js"></script>
 
-        <script src="./scripts/board.js"></script>
-        <script src="./scripts/drag_and_drop.js"></script>
-        <script src="./scripts/ticket.js"></script>
+    <script src="./scripts/board.js"></script>
+    <script src="./scripts/drag_and_drop.js"></script>
+    <script src="./scripts/ticket.js"></script>
 
-        <script src="./scripts/add_task.js"></script>
-        <script src="./scripts/dialog_add_contact.js"></script>
-        <script src="./scripts/contacts.js"></script>
-        <script src="./scripts/greetings.js"></script>
-        <script src="./scripts/summary.js"></script>
+    <script src="./scripts/add_task.js"></script>
+    <script src="./scripts/dialog_add_contact.js"></script>
+    <script src="./scripts/contacts.js"></script>
+    <script src="./scripts/greetings.js"></script>
+    <script src="./scripts/summary.js"></script>
 
-        <script src="./templates/tpl_login.js"></script>
-        <script src="./templates/tpl_ticket.js"></script>
-        <script src="./templates/tpl_navigation.js"></script>
-        <script src="./templates/tpl_board.js"></script>
-        <script src="./templates/tpl_add_task.js"></script>
-        <script src="./templates/tpl_summary.js"></script>
-    </body>
+    <script src="./templates/tpl_login.js"></script>
+    <script src="./templates/tpl_ticket.js"></script>
+    <script src="./templates/tpl_navigation.js"></script>
+    <script src="./templates/tpl_board.js"></script>
+    <script src="./templates/tpl_add_task.js"></script>
+    <script src="./templates/tpl_summary.js"></script>
+</body>
 
 </html>
