--- a/pages/help.html
+++ b/pages/help.html
@@ -21,10 +21,11 @@
     <nav aria-label="Primary navigation" id="nav-menu" class="nav-menu">
         <img id="logo" src="../assets/img/logo-white.png" alt="Join Logo">
         <div class="nav-menu__btn-container">
-            <a href="./summary.html"><img src="../assets/img/summary.svg" alt="Summary">Summary</a>
-            <a href="./add-task.html"><img src="../assets/img/add-task.svg" alt="Add Task">Add Task</a>
-            <a href="./board.html"><img src="../assets/img/board.svg" alt="Board">Board</a>
-            <a href="./contacts.html"><img src="../assets/img/contacts.svg" alt="Contacts">Contacts</a>
+            <a href="./summary.html"><img src="../assets/img/summary.svg" alt="go to Summary-page">Summary</a>
+            <a href="./add-task.html"><img src="../assets/img/add-task.svg" alt="go to Add-Task-page">Add Task</a>
+            <a href="./board.html"><img src="../assets/img/board.svg" alt="go to Board-page">Board</a>
+            <a class="nav-btn--selected deactivated" href="./contacts.html"><img src="../assets/img/contacts.svg"
+                    alt="go to Contacts-page">Contacts</a>
         </div>
         <div class="nav-menu__bottom__btn">
             <a href="./privacy-policy.html">Privacy Policy</a>
@@ -47,7 +48,7 @@
                         </div>
                     </div>
                 </div>
-                <nav aria-label="user drop down menu" class="d-none"> 
+                <nav aria-label="user drop down menu" class="d-none">
                     <ul class="user-drop-down-menu">
                         <li><a href="./legal-notice.html">Legal Notice</a></li>
                         <li><a href="./privacy-policy.html">Privacy Policy</a></li>
@@ -60,10 +61,11 @@
         <main>
             <div id="help-page-container" class="content">
                 <section id="help-content" class="help-content content-wrapper">
-                <div class="help-content_head-container">
-                    <h1>Help</h1>
-                    <img class="go-back-arrow" src="../assets/img/arrow-left-blue.svg" onclick="history.back()" alt="go back arrow">
-                </div> 
+                    <div class="help-content_head-container">
+                        <h1>Help</h1>
+                        <img class="go-back-arrow" src="../assets/img/arrow-left-blue.svg" onclick="history.back()"
+                            alt="go back arrow">
+                    </div>
                     <p>
                         Welcome to the help page for <strong>Join</strong>, your guide to using our kanban project
                         management tool.
@@ -72,7 +74,8 @@
 
                     <h2>What is Join?</h2>
                     <p>
-                        Join is a kanban-based project management tool designed and built by a group of dedicated students
+                        Join is a kanban-based project management tool designed and built by a group of dedicated
+                        students
                         as part
                         of their web development bootcamp at the <strong>Developer Akademie</strong>.
                     </p>
@@ -80,7 +83,8 @@
                     <p>
                         <em>Kanban</em>, a Japanese term meaning "billboard", is a highly effective method to visualize
                         work,
-                        limit work-in-progress, and maximize efficiency (or flow). Join leverages the principles of kanban
+                        limit work-in-progress, and maximize efficiency (or flow). Join leverages the principles of
+                        kanban
                         to help users manage their tasks and projects in an intuitive, visual interface.
                     </p>
 
@@ -100,7 +104,8 @@
                             <div class="list-content">
                                 <h4>Exploring the Board</h4>
                                 <p>
-                                    When you log in to Join, you'll find a default board. This board represents your project
+                                    When you log in to Join, you'll find a default board. This board represents your
+                                    project
                                     and contains four default lists:
                                     <strong>"To Do"</strong>, <strong>"In Progress"</strong>, <strong>"Await
                                         feedback"</strong> and <strong>"Done"</strong>.
@@ -127,8 +132,10 @@
                                 <p>
                                     Now that you've added your contacts, you can start adding cards. Cards represent
                                     individual tasks.
-                                    Click the <strong>"+"</strong> button under the appropriate list to create a new card.
-                                    Fill in the task details in the card, like task name, description, due date, assignees,
+                                    Click the <strong>"+"</strong> button under the appropriate list to create a new
+                                    card.
+                                    Fill in the task details in the card, like task name, description, due date,
+                                    assignees,
                                     etc.
                                 </p>
                             </div>
