--- a/pages/legal-notice.html
+++ b/pages/legal-notice.html
@@ -22,11 +22,11 @@
     <nav aria-label="Primary navigation" id="nav-menu" class="nav-menu">
         <img id="logo" src="../assets/img/logo-white.png" alt="Join Logo">
         <div class="nav-menu__btn-container">
-            <a href="./summary.html"><img src="../assets/img/summary.svg" alt="Summary">Summary</a>
-            <a class="nav-btn--selected deactivated" href="./add-task.html"><img src="../assets/img/add-task.svg"
-                    alt="Add Task">Add Task</a>
-            <a href="./board.html"><img src="../assets/img/board.svg" alt="Board">Board</a>
-            <a href="./contacts.html"><img src="../assets/img/contacts.svg" alt="Contacts">Contacts</a>
+            <a href="./summary.html"><img src="../assets/img/summary.svg" alt="go to Summary-page">Summary</a>
+            <a href="./add-task.html"><img src="../assets/img/add-task.svg" alt="go to Add-Task-page">Add Task</a>
+            <a href="./board.html"><img src="../assets/img/board.svg" alt="go to Board-page">Board</a>
+            <a class="nav-btn--selected deactivated" href="./contacts.html"><img src="../assets/img/contacts.svg"
+                    alt="go to Contacts-page">Contacts</a>
         </div>
         <div class="nav-menu__bottom__btn">
             <a href="./privacy-policy.html">Privacy Policy</a>
@@ -49,7 +49,7 @@
                         </div>
                     </div>
                 </div>
-                <nav aria-label="user drop down menu" class="d-none"> 
+                <nav aria-label="user drop down menu" class="d-none">
                     <ul class="user-drop-down-menu">
                         <li><a href="./legal-notice.html">Legal Notice</a></li>
                         <li><a href="./privacy-policy.html">Privacy Policy</a></li>
@@ -68,26 +68,32 @@
                         <p><strong>Student Names:</strong> Sascha Keßler, Sebastian Hedwig, Marvin Lenhart</p>
                         <p><strong>Address:</strong> Sebastian Hedwig</p>
                         <p><strong>Postcode and City:</strong> 65439 Flörsheim am Main</p>
-                        <p><strong>Email:</strong> <a href="mailto:sebastian.hedwig@web.de">sebastian.hedwig@web.de</a></p>
+                        <p><strong>Email:</strong> <a href="mailto:sebastian.hedwig@web.de">sebastian.hedwig@web.de</a>
+                        </p>
                         <br><br>
 
                         <h3>Acceptance of Terms</h3>
                         <p>
                             By accessing and using Join (Product), you acknowledge and agree to the following terms and
                             conditions,
-                            and any policies, guidelines, or amendments thereto that may be presented to you from time to
+                            and any policies, guidelines, or amendments thereto that may be presented to you from time
+                            to
                             time.
-                            We, the listed students, may update or change the terms and conditions from time to time without
+                            We, the listed students, may update or change the terms and conditions from time to time
+                            without
                             notice.
                         </p>
                         <br><br>
 
                         <h4>Scope and Ownership of the Product</h4>
                         <p>
-                            Join has been developed as part of a student group project in a web development bootcamp at the
+                            Join has been developed as part of a student group project in a web development bootcamp at
+                            the
                             Developer Akademie GmbH.
-                            It has an educational purpose and is not intended for extensive personal &amp; business usage.
-                            As such, we cannot guarantee consistent availability, reliability, accuracy, or any other aspect
+                            It has an educational purpose and is not intended for extensive personal &amp; business
+                            usage.
+                            As such, we cannot guarantee consistent availability, reliability, accuracy, or any other
+                            aspect
                             of quality regarding this Product.
                         </p>
                         <br>
@@ -102,14 +108,16 @@
                         <p>
                             Aside from the design owned by Developer Akademie GmbH, we, the listed students, retain all
                             proprietary
-                            rights in Join, including any associated copyrighted material, trademarks, and other proprietary
+                            rights in Join, including any associated copyrighted material, trademarks, and other
+                            proprietary
                             information.
                         </p>
                         <br><br>
 
                         <h4>Use of the Product</h4>
                         <p>
-                            Join is intended to be used for lawful purposes only, in accordance with all applicable laws and
+                            Join is intended to be used for lawful purposes only, in accordance with all applicable laws
+                            and
                             regulations.
                             Any use of Join for illegal activities, or to harass, harm, threaten, or intimidate another
                             person, is strictly prohibited.
@@ -119,15 +127,18 @@
 
                         <h3>Disclaimer of Warranties and Limitation of Liability</h3>
                         <p>
-                            Join is provided "as is" without warranty of any kind, whether express or implied, including but
+                            Join is provided "as is" without warranty of any kind, whether express or implied, including
+                            but
                             not limited to the implied warranties
-                            of merchantability, fitness for a particular purpose, and non-infringement. In no event will we,
+                            of merchantability, fitness for a particular purpose, and non-infringement. In no event will
+                            we,
                             the listed students,
                             or the Developer Akademie, be liable for any direct, indirect, incidental, special,
                             consequential or exemplary damages,
                             including but not limited to, damages for loss of profits, goodwill, use, data, or other
                             intangible losses,
-                            even if we have been advised of the possibility of such damages, arising out of or in connection
+                            even if we have been advised of the possibility of such damages, arising out of or in
+                            connection
                             with the use or performance of Join.
                         </p>
                         <br><br>
@@ -136,9 +147,11 @@
                         <p>
                             You agree to indemnify, defend and hold harmless us, the listed students, the Developer
                             Akademie, and our
-                            affiliates, partners, officers, directors, agents, and employees, from and against any claim,
+                            affiliates, partners, officers, directors, agents, and employees, from and against any
+                            claim,
                             demand, loss,
-                            damage, cost, or liability (including reasonable legal fees) arising out of or relating to your
+                            damage, cost, or liability (including reasonable legal fees) arising out of or relating to
+                            your
                             use of Join
                             and/or your breach of this Legal Notice.
                         </p>
