Fix: Navbar active state added for Privacy Policy and Legal Notice pages. Previously missing on these pages, now consistent across all views.

--- a/pages/legal-notice.html
+++ b/pages/legal-notice.html
@@ -30,7 +30,7 @@
         </div>
         <div class="nav-menu__bottom__btn">
             <a href="./privacy-policy.html">Privacy Policy</a>
-            <a href="./legal-notice.html">Legal Notice</a>
+            <a class="nav-btn--selected deactivated" href="./legal-notice.html">Legal Notice</a>
         </div>
     </nav>
 
