--- a/pages/privacy-policy.html
+++ b/pages/privacy-policy.html
@@ -30,7 +30,7 @@
                     alt="go to Contacts-page">Contacts</a>
         </div>
         <div class="nav-menu__bottom__btn">
-            <a href="./privacy-policy.html">Privacy Policy</a>
+            <a class="nav-btn--selected deactivated" href="./privacy-policy.html">Privacy Policy</a>
             <a href="./legal-notice.html">Legal Notice</a>
         </div>
     </nav>
