nav bar adjusted

--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -103,7 +103,7 @@
 
                             <div class="content-right__rendered-card">
                                 <div class="rendered-card__header">
-                                    <img src="../assets/img/user-img-anna.svg"
+                                    <img class="header__user-profil-img" src="../assets/img/user-img-anna.svg"
                                         alt="colored circle with starting letters of name and surname">
                                     <div class="manage-contact__header">
                                         <h3>Max Mustermann</h3>
