--- a/pages/privacy-policy.html
+++ b/pages/privacy-policy.html
@@ -26,11 +26,11 @@
             <a href="./summary.html"><img src="../assets/img/summary.svg" alt="go to Summary-page">Summary</a>
             <a href="./add-task.html"><img src="../assets/img/add-task.svg" alt="go to Add-Task-page">Add Task</a>
             <a href="./board.html"><img src="../assets/img/board.svg" alt="go to Board-page">Board</a>
-            <a class="nav-btn--selected deactivated" href="./contacts.html"><img src="../assets/img/contacts.svg"
+            <a href="./contacts.html"><img src="../assets/img/contacts.svg"
                     alt="go to Contacts-page">Contacts</a>
         </div>
         <div class="nav-menu__bottom__btn">
-            <a href="./privacy-policy.html">Privacy Policy</a>
+            <a class="nav-btn--selected deactivated" href="./privacy-policy.html">Privacy Policy</a>
             <a href="./legal-notice.html">Legal Notice</a>
         </div>
     </nav>
