Renamed js files Add functions sign up Add initil login animation

--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -8,6 +8,8 @@
     <link rel="icon" href="../assets/img/logo-black.png" type="image/x-icon">
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="../styles/login-signup.css">
+    <script src="../scripts/sign-up.js"></script>
+    <script src="../templates/tpl-sign-up.js"></script>
 </head>
 
 <body>
@@ -53,7 +55,7 @@
                     </span>
                 </p>
             </div>
-            <button class="btn filled-btn ">Sign up</button>
+            <div class="btn filled-btn" onclick="showSuccessfulSignUpMessage()">Sign up</div>
         </form>
     </main>
 
@@ -67,3 +69,4 @@
 </body>
 
 </html>
+
