--- a/index.html
+++ b/index.html
@@ -1,56 +1,60 @@
 <!DOCTYPE html>
 <html lang="de">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Kanban Board</title>
-        <link rel="icon" href="./assets/img/logo-black.png" type="image/x-icon">
-        <link rel="stylesheet" href="./style.css">
-        <link rel="stylesheet" href="./styles/login-signup.css">
-    </head>
 
-    <body>
-        <header class="content-wrapper header">
-            <img class="header__joinlogo" src="./assets/img/logo-black.png"
-                alt="the word: join with a big J with a blue dot on the left side,">
-            <div class="header__signup">
-                <span>Not a Join user?</span>
-                <button class="btn filled-btn" onclick="location.href='/pages/sign-up.html'">Sign
-                    up</button>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kanban Board</title>
+    <link rel="icon" href="./assets/img/logo-black.png" type="image/x-icon">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./styles/login-signup.css">
+    <script src="/scripts/login.js"></script>
+</head>
+
+<body>
+    <header class="content-wrapper header">
+        <img id="joinlogo" class="header__joinlogo start" src="./assets/img/logo-black.png"
+            alt="the word: join with a big J with a blue dot on the left side,">
+        <div class="header__signup invisible">
+            <span>Not a Join user?</span>
+            <button class="btn filled-btn" onclick="location.href='/pages/sign-up.html'">Sign
+                up</button>
+        </div>
+    </header>
+
+    <main class="content-wrapper invisible">
+        <form class="useraccess-form">
+            <div class="useraccess-form__header">
+                <h1>Log in</h1>
+                <div class="header__bluestrip"></div>
             </div>
-        </header>
 
-        <main class="content-wrapper">
-            <form class="useraccess-form">
-                <div class="useraccess-form__header">
-                    <h1>Log in</h1>
-                    <div class="header__bluestrip"></div>
+            <div class="form__inputfields">
+                <div class="inputfield__wrapper">
+                    <input type="email" placeholder="Email" aria-label="email">
+                    <img src="./assets/img/mail.svg" alt="icon of an email">
                 </div>
 
-                <div class="form__inputfields">
-                    <div class="inputfield__wrapper">
-                        <input type="email" placeholder="Email" aria-label="email" >
-                        <img src="./assets/img/mail.svg" alt="icon of an email">
-                    </div>
-
-                    <div class="inputfield__wrapper">
-                        <input type="password" placeholder="Password" aria-label="password" >
-                        <img src="./assets/img/lock.svg" alt="icon of a lock">
-                    </div>
+                <div class="inputfield__wrapper">
+                    <input type="password" placeholder="Password" aria-label="password">
+                    <img src="./assets/img/lock.svg" alt="icon of a lock">
                 </div>
-                
-                <div class="useraccess-form__btnholder">
-                    <button class="btn filled-btn">Log in</button>
-                    <button class="btn guest">Guest Log in</button>
-                </div>
-            </form>
-        </main>
-
-        <footer class="content-wrapper">
-            <div class="footer__privacy-legal-box">
-                <a href="./pages/privacy-policy.html">Privacy Policy</a>
-                <a href="./pages/legal-notice.html">Legal notice</a>
             </div>
-        </footer>
-    </body>
+
+            <div class="useraccess-form__btnholder">
+                <button class="btn filled-btn">Log in</button>
+                <button class="btn guest">Guest Log in</button>
+            </div>
+        </form>
+    </main>
+
+    <footer class="content-wrapper">
+        <div class="footer__privacy-legal-box">
+            <a href="./pages/privacy-policy.html">Privacy Policy</a>
+            <a href="./pages/legal-notice.html">Legal notice</a>
+        </div>
+    </footer>
+    
+</body>
+
 </html>
