Feat: implemented custom scrollbar on Privacy Policy, Legal Notice, and Help pages

--- a/pages/help.html
+++ b/pages/help.html
@@ -59,7 +59,7 @@
         </header>
 
         <main>
-            <div id="help-page-container" class="content">
+            <div id="help-page-container" class="content overflow-y">
                 <section id="help-content" class="help-content content-wrapper">
                     <div class="help-content_head-container">
                         <h1>Help</h1>
