--- a/pages/legal-notice.html
+++ b/pages/legal-notice.html
@@ -60,7 +60,7 @@
         </header>
 
         <main>
-            <div id="legal-page-container" class="content">
+            <div id="legal-page-container" class="content overflow-y">
                 <section id="legal-content" class="legal-content content-wrapper">
                     <h1>Legal Notice</h1>
                     <div>
