--- a/pages/privacy-policy.html
+++ b/pages/privacy-policy.html
@@ -61,7 +61,7 @@
         </header>
 
         <main class="main-content">
-            <div id="data-privacy-page-container" class="content">
+            <div id="data-privacy-page-container" class="content overflow-y">
                 <section id="data-privacy-content" class="data-privacy-content content-wrapper">
                     <h1>Privacy Policy</h1>
                     <h2>1. Datenschutz auf einen Blick</h2>
