Changed buttons to divs in several files Created Templates for add/edit task

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="./assets/img/logo-black.png" type="image/x-icon">
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./styles/login-signup.css">
-    <script src="/scripts/login.js"></script>
+    <script src="/scripts/login.js" defer></script>
 </head>
 
 <body>
@@ -42,8 +42,8 @@
             </div>
 
             <div class="useraccess-form__btnholder">
-                <button class="btn filled-btn">Log in</button>
-                <button class="btn guest">Guest Log in</button>
+                <div class="btn filled-btn">Log in</div>
+                <div class="btn guest">Guest Log in</div>
             </div>
         </form>
     </main>
@@ -54,7 +54,7 @@
             <a href="./pages/legal-notice.html">Legal notice</a>
         </div>
     </footer>
-    
+
 </body>
 
 </html>
