--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -8,8 +8,8 @@
     <link rel="icon" href="../assets/img/logo-black.png" type="image/x-icon">
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="../styles/login-signup.css">
-    <script src="../scripts/sign-up.js"></script>
-    <script src="../templates/tpl-sign-up.js"></script>
+    <script src="../scripts/sign-up.js" defer></script>
+    <script src="../templates/tpl-sign-up.js" defer></script>
 </head>
 
 <body>
