fixed height problem on the Texsites, added new css for task edit dialog. moved button class du style standart classes. Styled edit-dialog.

--- a/pages/add-task.html
+++ b/pages/add-task.html
@@ -84,11 +84,11 @@
                             <div class="add-task__field">
                                 <span for="priority">Priority</span>
                                 <div class="priority-options" id="priority">
-                                    <div class="priority-options__btn">Urgent <img
+                                    <div class="priority-options-btn">Urgent <img
                                             src="../assets/img/priority-urgent.svg" alt="urgent"></div>
-                                    <div class="priority-options__btn">Medium <img
+                                    <div class="priority-options-btn">Medium <img
                                             src="../assets/img/priority-medium.svg" alt="medium"></div>
-                                    <div class="priority-options__btn">Low <img src="../assets/img/priority-low.svg"
+                                    <div class="priority-options-btn">Low <img src="../assets/img/priority-low.svg"
                                             alt="low"></div>
                                 </div>
                             </div>
