--- a/pages/add-task.html
+++ b/pages/add-task.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="../styles/navigation.css">
     <link rel="stylesheet" href="../styles/add-task.css">
 
+    <script src="../scripts/db.js"></script>
     <script src="../script.js" defer></script>
     <script src="../scripts/add-task.js" defer></script>
 
