--- a/pages/summary.html
+++ b/pages/summary.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../styles/navigation.css">
     <link rel="stylesheet" href="../styles/summary.css">
 
+    <script src="../scripts/db.js" defer></script>
     <script src="../script.js" defer></script>
     <script src="../scripts/main.js" defer></script>
     <script src="../scripts/navigation.js" defer></script>
@@ -20,7 +21,7 @@
     <script src="../templates/tpl_summary.js" defer></script>
 </head>
 
-<body>
+<body onload="init()">
     <nav aria-label="Primary navigation" id="nav-menu" class="nav-menu">
         <img id="logo" src="../assets/img/logo-white.png" alt="Join Logo">
         <div class="nav-menu__btn-container">
@@ -137,7 +138,7 @@
                         </div>
                         <div class="summary-content__right">
                             <h3>Good morning!</h3>
-                            <span>Hier Name (nur wenn Eingeloggt, sonst leer)</span> <!--Soll je nach Tageszeit wechseln-->
+                            <span id="greeting"></span> <!--Soll je nach Tageszeit wechseln-->
                         </div>
                     </div>    
                 </section>
