implement function greetingHeader

--- a/pages/summary.html
+++ b/pages/summary.html
@@ -137,8 +137,8 @@
                             </div>
                         </div>
                         <div class="summary-content__right">
-                            <h3>Good morning!</h3>
-                            <span id="greeting"></span> <!--Soll je nach Tageszeit wechseln-->
+                            <h3 id="greeting-header"></h3>
+                            <span id="greeting-name"></span>
                         </div>
                     </div>    
                 </section>
