Implemented function to display the current date in summary.js

--- a/pages/summary.html
+++ b/pages/summary.html
@@ -108,7 +108,7 @@
                                     </div>
                                     <div class="grey_seperator"></div>
                                     <div class="metrics__box-text">
-                                        <span>Date</span>
+                                        <span class="metrics__box-date" id="current-date">Date</span>
                                         <span>Upcoming Deadline</span>
                                     </div>
                                 </a>
